appId: io.webdock.webdock
name: App launches to login screen
---
- launchApp:
    clearState: true
- tapOn: '.*localhost.*'
- tapOn:
    text: 'Close'
- extendedWaitUntil:
    visible:
      id: 'login-screen'
    timeout: 20000
